cabal-version:      >= 1.8
build-type:         Simple
name:               ghc-make
version:            0.2
license:            BSD3
license-file:       LICENSE
category:           Development
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2013-2014
synopsis:           Accelerated version of ghc --make
description:
    The @ghc-make@ program can be used as a drop-in replacement for @ghc@. This program
    targets two use cases:
    .
    * If a flag such as @-j4@ is passed, the modules will be compiled in parallel.
    If the available parallelism is greater than a factor of 3, the build will probably run faster.
    .
    * If there is no work to do (i.e. the compiled files are up-to-date), the build will run faster,
    sometimes significantly so.
    .
    See the readme for full details: <https://github.com/ndmitchell/ghc-make#readme>.
homepage:           https://github.com/ndmitchell/ghc-make#readme
bug-reports:        https://github.com/ndmitchell/ghc-make/issues
extra-source-files:
    README.md
    CHANGES.txt
tested-with:        GHC==7.8.2, GHC==7.6.3, GHC==7.4.2

source-repository head
    type:     git
    location: https://github.com/ndmitchell/ghc-make.git

executable ghc-make
    main-is: Main.hs
    ghc-options: -threaded
    build-depends:
        base == 4.*,
        shake >= 0.13,
        unordered-containers >= 0.2.1,
        process >= 1.0
    other-modules:
        Arguments
        Build
        Makefile
